# silver-octo-goggles

./: CMakeLists.txt  my_conf.conf
cmake/: #Summary.cmake#  .#Summary.cmake  Dependencies.cmake  Dependencies.cmake~  Misc.cmake  Ressources.cmake  Summary.cmake  Summary.cmake~
cmake/Modules/: FindExiv2.cmake  FindExiv2.cmake~  gmock.cmake  ucm.cmake
cmake/Templates/: wipro_config.h.in
doc/: .gitignore  HarmonyUserManual_v1.1.4.tex
html/: aboutHarmony.html  aboutHarmonyCaffe.html  aboutWipsea.html
include/core/: Item.hpp  Item.hpp~  Mission.hpp  Mission.hpp~  Observation.hpp  misc.hpp  misc.hpp~
include/ext/: json.h
include/gui/: CMakeLists.txt  CentralArea.hpp  DockFiles.hpp  DockImages.hpp  DockInfos.hpp  ImgZoom.hpp  ItemPrint.hpp  ModifySpecies.hpp  SoftWindow.hpp  SoftWindow.hpp~  tools.hpp
src/core/: CMakeLists.txt  Item.cpp  Item.cpp~  Mission.cpp  Mission.cpp~  Observation.cpp  Observation.cpp~  display.cpp~  misc.cpp  misc.cpp~
src/core/ext/: easylogging++.cc~  jsoncpp.cpp
src/core/unitTest/: CMakeLists.txt  itemTest.cpp  missionTest.cpp  observationTest.cpp
src/gui/: CMakeLists.txt  CMakeLists.txt~  CentralArea.cpp  CentralArea.cpp~  DockFiles.cpp  DockFiles.cpp~  DockImages.cpp  DockInfos.cpp  ImgZoom.cpp  ImgZoom.cpp~  ItemPrint.cpp  ModifySpecies.cpp  ModifySpecies.cpp~  SoftWindow.cpp  SoftWindow.cpp~  tools.cpp  windowApp.cpp  windowApp.cpp~
